More changes of build.sbt files, CancelOnNotImplemented, and particular unit test files, mostly