@@ -19,9 +19,16 @@ unmanagedBase := baseDirectory.value / "lib"
 Test / parallelExecution := false
 ThisBuild / evictionErrorLevel := Level.Warn
 
+// JDK 17+ compatibility: Hadoop/Spark uses javax.security.auth.Subject.getSubject()
+// which throws UnsupportedOperationException on JDK 18+.
+Test / javaOptions ++= Seq(
+  "-Djava.security.manager=allow",
+  "-Djavax.security.auth.useSubjectCredsOnly=false"
+)
+
 libraryDependencies ++= Seq(
-  "com.phasmidsoftware"    %% "tableparser-spark"   % Versions.tableParser,
-  "com.phasmidsoftware"    %% "tableparser-parquet" % Versions.tableParser,
+  "com.phasmidsoftware"    %% "tableparser-spark"   % Versions.tableParser2,
+  "com.phasmidsoftware"    %% "tableparser-parquet" % Versions.tableParser2,
   "com.github.nscala-time" %% "nscala-time"         % Versions.nscalaTime,
   "org.scalatest"          %% "scalatest"            % Versions.scalatest % Test,
   "org.apache.spark"       %% "spark-core"           % Versions.spark4,
